--- a/src/components/readerFeedback/SimpleQuill/SimpleQuill.module.css
+++ b/src/components/readerFeedback/SimpleQuill/SimpleQuill.module.css
@@ -1,29 +1,33 @@
 .container {
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
-  justify-content: center;
-  border-radius: 6px;
-  padding: 8px 20px;
-  background: #ededed;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 7px 18px;
+  gap: 10px;
+  width: 100%;
+  background: #fff;
 }
 
 .textarea {
   --padding-top: 0px;
-  --padding-bottom: 6px;
+  --padding-bottom: 0px;
   font-size: 14px;
-}
-
-.emojiButton {
-  padding: 4px;
-  border: 1px solid #000;
-  border-radius: 6px;
+  line-height: 20px;
 }
 
 .happyIcon {
-  font-size: 15px;
+  font-size: 20px;
+  margin-left: 14px;
 }
 
 .popover {
   --min-width: 350px;
+}
+
+.verticalDivider {
+  display: block;
+  width: 0px;
+  height: 24px;
+  border: 1px solid #c2cbd7;
 }
