--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,28 @@ body {
   width: 75%;
 }
 
+
+
+
+/* .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+} */
+
+
+h2.splash-title{
+  text-align: center;
+  margin: 25px 0px 15px 0px;
+}
+
+h2.slide-title{
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 15px
+}
+
 .welcome-page {
   text-align: center;
 }
@@ -62,15 +84,9 @@ body {
 .grid-full-height {
   display: flex;
   flex-flow: column;
+  height: 100%;
 }
 
 .grid-full-height .fill-remaining {
   flex-grow: 1;
 }
-
-/* .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-} */
