--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,3 @@
-#crowd-bible-app {
-  width: 375px;
-  margin: auto;
-}
-
 html,
 body {
   position: relative;
@@ -17,6 +12,11 @@ body {
   color: #000;
   margin: 0;
   padding: 0;
+}
+
+#crowd-bible-app {
+  width: 375px;
+  margin: auto;
 }
 
 .swiper {
@@ -47,9 +47,6 @@ body {
   width: 75%;
 }
 
-
-
-
 /* .swiper-slide img {
     display: block;
     width: 100%;
@@ -57,16 +54,15 @@ body {
     object-fit: cover;
 } */
 
-
-h2.splash-title{
+h2.splash-title {
   text-align: center;
   margin: 25px 0px 15px 0px;
 }
 
-h2.slide-title{
+h2.slide-title {
   font-size: 22px;
   font-weight: 600;
-  margin-bottom: 15px
+  margin-bottom: 15px;
 }
 
 .welcome-page {
