Align Center & limit max-width to 777px

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,6 @@ body {
 }
 
 body {
-  background: #eee;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
@@ -15,7 +14,7 @@ body {
 }
 
 #crowd-bible-app {
-  width: 375px;
+  max-width: 777px;
   margin: auto;
 }
 
@@ -27,7 +26,7 @@ body {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  /* background: #fff; */
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
